取消悬浮目录

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -39,7 +39,7 @@
                 let floatTocWidth = (document.body.clientWidth - colGroupElem.offsetWidth) / 2 - 16;
                 var useFloatToc = false;
 
-                if (floatTocWidth >= 180) {
+                if (false && floatTocWidth >= 180) {
                     useFloatToc = true;
                     document.getElementById("toc_list").appendChild(tocNavElem);
                     floatTocDivElem.style.display = 'block';
