添加备案号

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <footer id="footer">
-    <div class="container">
+    <div class="container" style="text-align:center">
         &copy; {{ now.Format "2006" }} <a href="{{ .Site.BaseURL | absURL }}">{{ .Site.Title }} By {{ .Site.Author.name }}</a>.
         Powered by <a rel="nofollow noreferer noopener" href="https://gohugo.io" target="_blank">Hugo</a>.
         <a href="https://www.flysnow.org/" target="_blank">Theme</a> based on <a href="https://github.com/rujews/maupassant-hugo" target="_blank">maupassant</a>.
@@ -7,6 +7,11 @@
         Hosted by <a rel="nofollow noreferer noopener" href="https://pages.coding.me" target="_blank">Coding Pages</a>.
         {{ end }}
     </div>
+    {{ if .Site.Params.registerInfo }}
+    <div class="container" style="text-align:center">
+    <a rel="nofollow noreferer noopener" href="http://www.beian.miit.gov.cn/" target="_blank">{{ .Site.Params.registerInfo }}</a>.
+    </div>
+    {{ end }}
 </footer>
 
 {{ if .IsPage }}
